--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "daily-time-log",
   "version": "1.0.0",
-  "description": "No description,
+  "description": "No description",
   "main": "",
   "scripts": {
     "test": "NA"
